--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: "3.1"
 
 services:
   web:
-    image: quay.io/philippeferreiradesousa/ponthe-web:${TAG:-latest}
-    build: ./web
+    image: quay.io/enpcponthe/galeries-web:${TAG-latest}
     ports:
       - "127.0.0.1:${WEB_PORT}:80"
     volumes:
@@ -21,27 +20,13 @@ services:
       - SQLALCHEMY_DATABASE_URI=mysql://${DATABASE_USER}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}
       - MAIL_PASSWORD=${MAIL_PASSWORD}
       - WEBHOOK_URL=${WEBHOOK_URL}
-    restart: always
-
-  sshd:
-    # image: quay.io/philippeferreiradesousa/ponthe-sshd:${TAG:-latest}
-    env_file: .env
-    build:
-      context: ./sshd
-      args:
-        - SSH_USERNAME
-        - SSH_PASSWORD
-    ports:
-      - "7502:22"
-    volumes:
-      - club-folder:/home/ponthe
-    restart: always
+      - TAG=${TAG}
+    restart: on-failure
 
   backup:
-    env_file: .env
     image: candyline/mysql-backup-cron
     volumes:
-      - ./db-backup:/backup
+      - ./volumes/db-backup:/backup
     environment:
       - MYSQL_ROOT_PASSWORD=${DATABASE_ROOT_PASSWORD}
       - MYSQL_HOST=db
@@ -50,12 +35,11 @@ services:
       - CRON_D_BACKUP="0 1 * * * root /backup.sh | logger"
     depends_on:
       - db
-    restart: always
+    restart: on-failure
 
   db:
-    env_file: .env
     image: mysql:8.0
-    command: mysqld --default-authentication-plugin=mysql_native_password # Sinon "Authentication plugin 'caching_sha2_password' cannot be loaded
+    command: mysqld --default-authentication-plugin=mysql_native_password
     volumes:
       - db-data:/var/lib/mysql
     environment:
@@ -64,7 +48,7 @@ services:
       - MYSQL_DATABASE=${DATABASE_NAME}
       - MYSQL_USER=${DATABASE_USER}
       - MYSQL_PASSWORD=${DATABASE_PASSWORD}
-    restart: always
+    restart: on-failure
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
@@ -72,10 +56,8 @@ services:
       - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - db
-    restart: always
+    restart: on-failure
 
 volumes:
   db-data:
-    driver: local
-  club-folder:
     driver: local
