--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
-      - "7500:80"
+      - "${PHPMYADMIN_PORT}:80"
     depends_on:
       - db
     restart: always
