--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,5 @@
 # Template file, rename it .env for it to take effects
-
-TAG=master
+TAG=testing
 
 # Ports
 WEB_PORT=7000
@@ -12,7 +11,11 @@ DATABASE_USER=me
 DATABASE_PASSWORD=password
 DATABASE_ROOT_PASSWORD=rootPassword
 
+# SSH Server
+SSH_USERNAME=me
+SSH_PASSWORD=ImNotSoSecretSoChangeMe
+
 # Flask app
-SECRET_KEY=d66HREGTHUVGDRfdt4
+SECRET_KEY=ImNotSoSecretSoChangeMe
 MAIL_PASSWORD=ImNotSoSecretSoChangeMe
 WEBHOOK_URL='https://hooks.slack.com/services/TABUN0UVA/BCTUTHWGZ/<token>'
