--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,8 @@ jobs:
     docker:
       - image: docker:17-git
     steps:
-      # - setup_remote_docker:
-      #       docker_layer_caching: true
+      - setup_remote_docker:
+            docker_layer_caching: true
       - checkout
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD quay.io
       - run: |
