--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,7 @@ jobs:
     docker:
       - image: docker:17-git
     steps:
-      - setup_remote_docker:
-            docker_layer_caching: true
+      - setup_remote_docker
       - checkout
       - run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD quay.io
       - run: |
@@ -50,7 +49,7 @@ jobs:
           name: Deploy over SSH
           command: |
             ssh $SSH_USER@$SSH_HOST << EOF
-            cd /srv/ponthe$([ "${CIRCLE_BRANCH}" == "master" ] || echo "-${CIRCLE_BRANCH}").enpc.org
+            cd /srv/ponthe$([ "${CIRCLE_BRANCH}" == "master" ] || echo "-${CIRCLE_BRANCH}").enpc.org/back
             docker login -u $DOCKER_USER -p $DOCKER_PASSWORD quay.io
             docker-compose exec backup /backup.sh
             docker-compose pull
