--- a/web/app/requirements.txt
+++ b/web/app/requirements.txt
@@ -3,7 +3,7 @@ Flask_Mail
 Flask-Login
 Flask-CAS
 Flask-Cli
-Werkzeug
+Werkzeug==0.16.1
 SQLAlchemy
 Flask-SQLAlchemy
 mysqlclient
@@ -15,4 +15,6 @@ Flask-JWT-extended[asymmetric_crypto]
 click
 Flask-Thumbnails
 Pillow
-Flask-Tus-Ponthe==1.0.1
+Flask-Tus-Ponthe==1.1.3
+Flask-CORS
+Flask-Restplus
