--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
           command: |
             ssh $SSH_USER@$SSH_HOST << EOF
             cd /srv/ponthe$([ "${CIRCLE_BRANCH}" == "master" ] || echo "-${CIRCLE_BRANCH}").enpc.org/back
-            docker-compose logs
+            docker-compose logs web
             EOF
 
 workflows:
