--- a/web/custom.conf
+++ b/web/custom.conf
@@ -1,3 +1,7 @@
-fastcgi_read_timeout 600;
-proxy_read_timeout 600;
-uwsgi_read_timeout 600;
+fastcgi_read_timeout 600s;
+proxy_connect_timeout 600s;
+proxy_read_timeout 600s;
+proxy_send_timeout 600s;
+send_timeout 600s;
+uwsgi_read_timeout 600s;
+uwsgi_send_timeout 600s;
