--- a/web/app/nginx.conf
+++ b/web/app/nginx.conf
@@ -14,6 +14,7 @@ http {
     access_log  /var/log/nginx/access.log  main;
     sendfile        on;
     keepalive_timeout  300;
+    client_max_body_size 1500M;
     server {
         listen 80;
         location / {
