--- a/web/app/nginx.conf
+++ b/web/app/nginx.conf
@@ -13,7 +13,7 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
     access_log  /var/log/nginx/access.log  main;
     sendfile        on;
-    keepalive_timeout  300;
+    keepalive_timeout  1200s;
     client_max_body_size 1500M;
     server {
         listen 80;
