--- a/web/app/nginx.conf
+++ b/web/app/nginx.conf
@@ -14,6 +14,13 @@ http {
     access_log  /var/log/nginx/access.log  main;
     sendfile        on;
     keepalive_timeout  1200s;
+    fastcgi_read_timeout 600s;
+    proxy_connect_timeout 600s;
+    proxy_read_timeout 600s;
+    proxy_send_timeout 600s;
+    send_timeout 600s;
+    uwsgi_read_timeout 600s;
+    uwsgi_send_timeout 600s;
     client_max_body_size 1500M;
     server {
         listen 80;
@@ -28,7 +35,5 @@ http {
             alias /app/static;
         }
     }
-
-    include /etc/nginx/conf.d/*.conf;
 }
 daemon off;
