--- a/web/custom.conf
+++ b/web/custom.conf
@@ -3,3 +3,5 @@ proxy_connect_timeout 600s;
 proxy_read_timeout 600s;
 proxy_send_timeout 600s;
 send_timeout 600s;
+uwsgi_read_timeout 600s;
+uwsgi_send_timeout 600s;
